tests/ui/errors/non_str_child.rs
use leptos_mview::view;

fn main() {
    view! {
        div { 3 }
    };
}
